--- a/style.css
+++ b/style.css
@@ -155,6 +155,9 @@ pre > code {
   display: block;
 }
 
+:not(pre) > code[class*="language-"], pre[class*="language-"] {
+  background: #2d2d2d;
+}
 pre[class*="language-"] + pre[class*="language-"].result {
   background-color: #202020;
   position: relative;
