Don't highlight input box

--- a/style.css
+++ b/style.css
@@ -167,6 +167,11 @@ pre[class*="language-"] + pre[class*="language-"].result {
 pre[class*="language-"].result {
   z-index: 1;
 }
+input[type="text"] {
+  background-color: #2d2d2d;
+  outline: none;
+  color: #ccc;
+}
 
 /*
 main {
